<resources>
    <string name="app_name">Encrypt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home_button">Process</string>
    <string name="home_your_text">Your text</string>
    <string name="home_enc_txt">Encrypted text</string>
    <string name="home_dec_txt">Decrypted text</string>
    <string name="home_massage">Massage viewer</string>

</resources>
